--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
   sonarqube:
     image: sonarqube:lts-community
@@ -18,7 +16,7 @@ services:
       - sonarqube_logs:/opt/sonarqube/logs
       - sonarqube_temp:/opt/sonarqube/temp
   sonar_db:
-    image: postgres:13
+    image: postgres:17-alpine3.21
     environment:
       POSTGRES_USER: sonar
       POSTGRES_PASSWORD: sonar
